added background colours to fieldset.html file

--- a/fieldset.html
+++ b/fieldset.html
@@ -4,10 +4,10 @@
         <title>Fieldet element</title>
     </head>
 
-    <body>
+    <body style="background-color: aquamarine;">
         <h1>The fieldset element</h1>
 
-        <fieldset>
+        <fieldset style="background-color: bisque;">
             <legend>Personal Details</legend>
 
             <label for="fname">First Name: </label>
@@ -28,7 +28,7 @@
 
         <br>
 
-        <fieldset>
+        <fieldset style="background-color: blueviolet;">
             <legend>Professional Details</legend>
 
             <label for="o">Occupation: </label>
